--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ configurations {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.springframework.boot:spring-boot-starter-tomcat')
+	providedCompile('org.springframework.boot:spring-boot-starter-tomcat')
 	compile 'org.apache.httpcomponents:httpclient:4.5.3'
 	compile 'commons-beanutils:commons-beanutils:1.9.3'
 	compile 'org.apache.commons:commons-io:1.3.2'
